data/derived/comb/progs/unify/prog8324.ml.out
Characters 123-137:
  let seen' = if List.rev (List.mem h t) then seen 
                          ^^^^^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         'a list
